# airflow-dags-sample

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.dev/: Dockerfile  docker-compose.yaml
dags/: example_dag.py  example_dag.yml  example_dag_1.yml  example_dag_2.yml  example_dag_3.yml
dags/configs/: example_dag_2.yml
