[project]
name = "airflow-dags-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=2.4",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "dag-factory>=0.22.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
